# ce_assistant_test_dashboards

./: config.py  pyproject.toml  report_sales.json  report_sales_one_division.json
client/: utils.py
client/assistant/: client.py  enum.py
client/assistant/model/: auth.py  exceles.py  report.py  store.py
client/one_c/: client.py  enum.py
test/: test_get_stores_all.py  test_post_report_one_division.py  test_post_report_sales.py  test_post_report_sales_excel.py
