[tool.poetry]
name = "ce-assistant-test-dashboards"
version = "0.1.0"
description = ""
authors = ["Natalia <tsepeleva.natalia16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
